GNOME Bugzilla – Bug 547098
evince should use the whole window for single page pdfs
Last modified: 2013-10-29 08:45:28 UTC
Originally reported in Launchpad: https://launchpad.net/bugs/256445 ---- Binary package hint: evince When displaying a single page pdf, evince still uses dual mode display, wasting half the screen real estate. To reproduce: 1 set to dual mode by default 2 open a single page pdf Expected: full page display. Proposed solution: provide explicit single and dual page views, and 'smart' view which aims to optimise viewing area use.
Created attachment 192056 [details] [review] Bugfix patch: Evince should use the whole window for single page pdfs
Hello. I'd like to check the status on this bug. Did it make it into the source tree?
Review of attachment 192056 [details] [review]: ::: shell/ev-window.c @@ +1272,3 @@ + if (n_pages == 1) + ev_document_model_set_dual_page (window->priv->model, FALSE); + I think Evince should honour the user setting for the document. If the document is being opened for the first time, this could be a good option. However, if the user set the document to dual page and then closed it, Evince should open it in the same state than the user closed it.
*** Bug 524332 has been marked as a duplicate of this bug. ***
Created attachment 258021 [details] [review] Opening single page pdfs in full window instead of dual mode When a new single page pdf is opened for first time, it opens in single page mode even if default mode is dual page. For other documents or documents opened previously, user preferences are honored.
Review of attachment 258021 [details] [review]: This parch looks good to me. I would suggest to adjust the commit message to 72 columns, but that is only niptick. Just to avoid any confusion. This patch looks very similar to the previous one, but this is located in the right place.
Review of attachment 258021 [details] [review]: Also, don't forget to add the bugzilla url in the commit log.
Comment on attachment 258021 [details] [review] Opening single page pdfs in full window instead of dual mode Pushed to git master, thanks