shell: Do not open single page pdfs in dual mode by default

Single page pdfs will now open in full window even if the default mode
is dual mode. This will apply to pdfs that are opened for first time,
otherwise user preferences are honored.

https://bugzilla.gnome.org/show_bug.cgi?id=547098